--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,10 @@
 
+# Config Server URL
+spring.cloud.config.uri=http://localhost:8888
+spring.config.import=optional:configserver:
 
-# ==  H2 Database URL Access
-# ==  http://localhost:8080/h2/login.jsp
-spring.application.name=Tpg-Demo-Application
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:tpgsample
-spring.datasource.username=tpg
-spring.datasource.password=tpg
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 
 # == config server default access : http://localhost:8888/<properties-file-name>/<profiles>
-# == http://localhost:8888/config-client/default
+# == http://localhost:8888/application/native
 # https://tfs.systemsltd.com:8080/tfs/SL-DBU/TEL/_git/TPG-DEMO
 
