--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Config Server URL
 spring.cloud.config.uri=http://localhost:8888
 spring.config.import=optional:configserver:
-
-
-
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=refresh
+eureka.client.serviceUrl.defaultZone=http://localhost:8083/eureka
 
