--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-
-# == config server default access : http://localhost:8888/<properties-file-name>/<profiles>
-# == http://localhost:8888/application/native
-
-# Config Server URL
+server.port=8082
+spring.application.name=employee-service
 spring.cloud.config.uri=http://localhost:8888
 spring.config.import=optional:configserver:
-#management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.include=refresh
-eureka.client.serviceUrl.defaultZone=http://localhost:8083/eureka
-
+#eureka.instance.hostname=localhost
