--- a/src/main/resources/service.yaml
+++ b/src/main/resources/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tpg-demo-application-service
+  name: employee-service
+  namespace: tpg
+  labels:
+    group: general
 spec:
-  ports:
-    - protocol: "TCP"
-      port: 8080        # The port inside the cluster
-      targetPort: 8080  # The port exposed by the service
-  type: NodePort        # Type of service
+  type: ClusterIP
   selector:
-    app: tpg-demo-application
+    app: employee-service
+  ports:
+    - port: 8080
