--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8082
 spring.application.name=employee-service
 #spring.cloud.config.uri=http://localhost:8888
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:config-service:http://config-service:8080
 spring.profiles.active=native
 management.endpoints.web.exposure.include=refresh
 #eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone= http://discovery-service:8080/eureka/
