--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.cloud.config.enabled=false
 spring.profiles.active=native
 management.endpoints.web.exposure.include=refresh
 #eureka.instance.hostname=localhost
-ureka.client.serviceUrl.defaultZone=http://discovery-service:8080/eureka
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8080/eureka
