--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=employee-service
 #spring.cloud.config.uri=http://localhost:8888
 #spring.cloud.config.enabled=false
-spring.config.import=optional:configservice:http://config-service:8080
+spring.config.import=optional:configservice:http://config-service:8080/
 spring.profiles.active=native
 management.endpoints.web.exposure.include=refresh
 #eureka.instance.hostname=localhost
