--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=employee-service
 spring.config.import=optional:configserver:http://config-service:8080
 spring.profiles.active=native
 management.endpoints.web.exposure.include=refresh
-#eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
